# beholder-app

./: .eslintrc.json  .gitignore  MacKeyMap.js  Marker.js  UDPManager.js  WinKeyMap.js  app.js  aruco_test.js  binding.gyp  dataflow.md  index.html  keyboard_emulator.cc  keyboard_test.js  main.js  package-lock.json  package.json  readme.md  style.css  tsconfig.json
Assets/Styles/: Main.css
Interface/: CommandReducer.ts  Marker.js  NodeManager.ts  ProgramDriver.js  WebcamDetectionDriver.js  index.html  index.ts
Interface/Components/: ANDLogicNode.ts  AngleChangeNode.ts  BetweenLogicNode.ts  DetectionNode.ts  GreaterThanLogicNode.ts  KeyPressNode.ts  KeyTapNode.ts  LessThanLogicNode.ts  MarkerNode.ts  (+8 more)
Native/: DetectionManager.js  KeyboardManager.js  Marker.js  ProgramManager.js
Native/LocalMarkerDetection/: CMakeLists.txt  Readme.md
Native/LocalMarkerDetection/include/: image_markers.hpp
Native/LocalMarkerDetection/src/: format.json  image_markers.cpp  marker_detection_demo.cpp  marker_detection_win.cc
Rust/: Cargo.toml  build.rs  readme.md
Rust/sample-json/: sample1  sample1_edited  simple.json
Rust/src/: main.rs
Rust/src/beholder_tree/: mod.rs
Rust/src/beholder_tree/nodes/: mod.rs
Rust/src/json_parser/: mod.rs
Rust/src/json_parser/beholder_node/: mod.rs
Rust/src/keyboard_emulation/: mod.rs
Rust/src/keyboard_emulation/win/: keycodes.rs  mod.rs
Rust/src/keys/: mod.rs
Rust/src/marker_detection/: mod.rs
Test/: Cargo.toml
beholdereact/: package-lock.json  package.json
marker_detection/: CMakeLists.txt  Readme.md
marker_detection/include/: aruco_samples_utility.hpp
marker_detection/src/: aruco_example.cpp
src/: NodeManager.ts  UndoRedoManager.ts  index.ts
src-tauri/: tauri.conf.json
(+52 files in other folders)
