[package]
name = "beholder"
version = "0.1.0"
edition = "2021"

[dependencies]
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }

# opencv = { version = "0.78.2", default-features = false, features = ["videoio", "highgui", "objdetect", "aruco"] }
opencv = { version = "0.78.2" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
